<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="subtract">−</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="exponent">exp</string>
    <string name="test">test</string>
</resources>
