<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ubclaunchpad.calculator.CalculatorActivity">

    <LinearLayout
        android:id="@+id/SimpleCalcLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/firstInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="First Input"
            android:inputType="numberDecimal"/>
        <LinearLayout
            android:id="@+id/operationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/operation_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/add"/>

            <Button
                android:id="@+id/operation_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/subtract"/>

            <Button
                android:id="@+id/operation_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/multiply"/>

            <Button
                android:id="@+id/operation_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/divide"/>
        </LinearLayout>

        <EditText
            android:id="@+id/secondInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Second Input"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/extraFunctionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SimpleCalcLayout"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Extra functions:"
            android:textSize="18sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/operation_exponent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/exponent"/>

                    <Button
                        android:id="@+id/operation_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/log"/>

                    <Button
                        android:id="@+id/operation_sin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/sin"/>

                    <Button
                        android:id="@+id/operation_cos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/cos"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/operation_tan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/tan"/>

                    <Button
                        android:id="@+id/test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/test"/>
                </TableRow>

            </TableLayout>
        </ScrollView>


    </LinearLayout>
</RelativeLayout>
